# spaceGame

./: CMakeLists.txt  application.cpp  application.hpp  game.cpp  game.hpp  main.cpp
figure/: CMakeLists.txt
primitive/: CMakeLists.txt  line.cpp  line.hpp
scene/: CMakeLists.txt  scene.hpp  sdl_scene.cpp  sdl_scene.hpp  skeleton.hpp
space/: CMakeLists.txt  asteroid.cpp  asteroid.hpp  nozzle.hpp  ship.hpp  speed.hpp
